--- a/angular.json
+++ b/angular.json
@@ -4,12 +4,14 @@
   "newProjectRoot": "projects",
   "projects": {
     "Angular-Wather-App": {
+    
       "projectType": "application",
       "schematics": {},
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
+     
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
@@ -26,7 +28,6 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
-              
             ],
             "scripts": []
           },
@@ -62,10 +63,12 @@
             }
           }
         },
+      
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Angular-Wather-App:build"
+            "browserTarget": "Angular-Wather-App:build",
+         
           },
           "configurations": {
             "production": {
@@ -122,6 +125,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "Angular-Wather-App"
 }
