--- a/angular.json
+++ b/angular.json
@@ -4,7 +4,6 @@
   "newProjectRoot": "projects",
   "projects": {
     "Angular-Wather-App": {
-    
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -67,7 +66,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Angular-Wather-App:build",
+            "browserTarget": "Angular-Wather-App:build"
          
           },
           "configurations": {
