--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.2.14",
     "bootstrap": "^4.4.0",
     "core-js": "^3.4.5",
+    "express": "^4.17.1",
     "jquery": "^3.4.1",
     "karma-cli": "^2.0.0",
     "rxjs": "~6.4.0",
